# KOIL

./: CMakeLists.txt  CMakeLists.txt.user.940a660  CMakeLists.txt.user.f7d268e  KOIL.cpp  KOIL.h  KOIL.h.autosave  README.md  ReadMe.txt  cv.cpp  cv.h  cv_gamma.cpp  cv_mkl.cpp  cv_mkl2.cpp  cv_plus.cpp  main.cpp  mkl.cpp  online.cpp  svm.cpp  svm.h  utility.cpp  utility.h
dataset/: australian  australian_IdxAsso  australian_IdxCv  breast_cancer  breast_cancer_IdxAsso  breast_cancer_IdxCv  diabetes  diabetes_IdxAsso  diabetes_IdxCv  dna  dna_IdxAsso  dna_IdxCv  fourclass  fourclass_IdxAsso  fourclass_IdxCv  german  german_IdxAsso  german_IdxCv  glass  glass_IdxAsso  glass_IdxCv  heart  heart_IdxAsso  heart_IdxCv  ionosphere  ionosphere_IdxAsso  ionosphere_IdxCv  letter  letter_IdxAsso  letter_IdxCv  libsvm_write.m  liver_disorders  liver_disorders_IdxAsso  liver_disorders_IdxCv  logs_12t  logs_12t_IdxAsso  logs_12t_IdxCv  poker  poker_IdxAsso  poker_IdxCv  (+45 more)
html/: KOIL_8h_source.html  annotated.html  classKOIL-members.html  classKOIL.html  classes.html  files.html  functions.html  functions_func.html  index.html  structkoil__result-members.html  structkoil__result.html  structsvm__model-members.html  structsvm__model.html  structsvm__node-members.html  structsvm__node.html  structsvm__parameter-members.html  structsvm__parameter.html  structsvm__problem-members.html  structsvm__problem.html  svm_8h_source.html  utility_8h_source.html
latex/: annotated.tex  classKOIL.tex  refman.aux  refman.idx  refman.ilg  refman.out  refman.tex  refman.toc  structkoil__result.tex  (+4 more)
(+8 files in other folders)
